    - $ExtUtils::MakeMaker::Revision accidentally left in a stray "Revision".
      [thanks pdx.pm for noticing this]
    - Fixed the $VERSION = $Revision$ example in the MakeMaker docs and the
      FAQ. [thanks again, pdx.pm]
    - Elaborated on the differences between CVS, SVN and others when using
      $Revision$ based $VERSIONs.

6.30  Fri May 20 16:05:38 PDT 2005
    * PL_FILES behavior tweak again to restore old behavior.  Sometimes its 
      supposed to run before pm_to_blib, sometimes after.
    - Some tests shipped with 'no_plan' which will break on older 
      Test::Harness.

6.29  Thu May 19 14:15:21 PDT 2005
    * The behavior of PL_FILES is restored to its pre-6.26 behavior as several
      CPAN modules depend on this.  PL programs run via PL_FILES have 
      INST_LIB and INST_ARCH in their @INC and so can load any just built 
      modules.
    - Now honors PERL_CORE environment variable.
    - Testing to ensure FIRST_MAKEFILE is honored.

6.28  Tue Apr 12 16:17:07 PDT 2005
    - Fix realclean so it cleans up files installed from ext/ in the core
    - Fix dir_target() so it doesn't warn should any of the INST_* paths
      be the same (as with the ext/ modules in the core)
    - Fix MANIFEST.SKIP so it skips not just _darcs/ but everything inside
      it and any which happen to be in subdirs.
    - MM_AIX forgot to import neatvalue() from E::MakeMaker. 
      (bleadperl@24185)
    - Fixed a minor C<<>> POD nit (Scott Lanning)

6.27  Mon Apr  4 16:36:14 PDT 2005
    * Added _darcs to the list of revision control administrative 
      directories skipped both in libscan and in MANIFEST.SKIP.

6.26_01 Mon Mar 28 21:34:39 PST 2005
    * PL_FILES was broken in the last release.  The .PL files were not being
      passed the file they were to generate.
    * How PL_FILES runs the programs and what it does with the value is 
      now documented.
    * The default behavior of PL_FILES is now documented.

6.26  Mon Mar 21 20:36:22 PST 2005
